--- a/beijing/pages/fangfang/style.css
+++ b/beijing/pages/fangfang/style.css
@@ -253,3 +253,28 @@ body {
   left: 0;
   transform: translateZ(0px);
 }
+.music {
+  position: fixed;
+  z-index: 999;
+  top: 20px;
+  left: 320px;
+  width: 40px;
+  height: 40px;
+  background: url("./images/music.png");
+  background-size: 100% 100%;
+  background-repeat: no-repeat; 
+}
+
+/****动画*****/
+.musicAct {
+  animation: musicPlay 2s linear 0.2s infinite normal; 
+}
+
+@keyframes musicPlay {
+  0% {
+    transform: roate(0deg); 
+  }
+  100% {
+    transform: rotate(360deg); 
+  }
+}
